added maven run local and adjusted readme